# laba05

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake  coverage.info
_build/Testing/Temporary/: CTestCostData.txt
banking/: Transaction.cpp
tests/: tests.cpp
